<resources>
    <string name="app_name">Home tasks</string>
    <string name="top">top</string>
    <string name="bottom">bottom</string>
    <string name="swap">swap</string>
    <string name="homeTask1">Home task 1</string>
    <string name="homeTask2">Home task 2</string>
    <string name="homeTask3">Home task 3</string>
    <string name="homeTask4">Home task 4</string>
    <string name="homeTask5">Home task 5</string>
    <string name="homeTask6">Home task 6</string>
    <string name="homeTask7">Home task 7</string>
    <string name="homeTask8">Home task 8</string>
    <string name="homeTask9">Home task 9</string>
    <string name="URL">URL</string>
    <string name="Download">Download</string>
    <string name="ht4EditText">Example: 5,4,3</string>
    <string name="ht4ShowButton">Show</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="ht5SwitchButton">Switch</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="age">Age</string>
    <string name="add">add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="find">Find</string>
</resources>
