<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">

        <Button
            android:id="@+id/ht1_button"
            style="@style/TaskButton"
            android:text="@string/homeTask1" />

        <Button
            android:id="@+id/ht2_button"
            style="@style/TaskButton"
            android:text="@string/homeTask2" />

        <Button
            android:id="@+id/ht3_button"
            style="@style/TaskButton"
            android:text="@string/homeTask3" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">

        <Button
            android:id="@+id/ht4_button"
            style="@style/TaskButton"
            android:text="@string/homeTask4" />

        <Button
            android:id="@+id/ht5_button"
            style="@style/TaskButton"
            android:text="@string/homeTask5" />

        <Button
            android:id="@+id/ht6_button"
            style="@style/TaskButton"
            android:text="@string/homeTask6" />

    </LinearLayout>

</LinearLayout>