<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/student_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/student_name_et"
            style="@style/StudentEditText"
            android:hint="@string/name"
            android:inputType="text" />

        <EditText
            android:id="@+id/student_surname_et"
            style="@style/StudentEditText"
            android:hint="@string/surname"
            android:inputType="text" />

        <EditText
            android:id="@+id/student_age_et"
            style="@style/StudentEditText"
            android:hint="@string/age"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:weightSum="2">

        <Button
            android:id="@+id/edit_student_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit" />

        <Button
            android:id="@+id/delete_student_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete" />
    </LinearLayout>

</LinearLayout>